--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -76,4 +76,102 @@
   </div>
 </div>
 
+<div class="modal-bg">
+  <div class="login-modal">
+    <form action="#" method="POST">
+      <div class="login-info">
+        <p class="p-input">Эл. почта</p>
+        <input type="text" name="email">
+        <p class="p-input">Пароль</p>
+        <input type="password" name="password">
+      </div>
+      <div class="remember-forgot">
+        <label class="remember">Запомнить
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <div class="forgot">
+          <p>Забыли пароль?</p>
+        </div>
+      </div>
+      <div class="login-btn">
+        <button type="submit">Войти <span>&#8640;</span></button>
+      </div>
+    </form>
+    <div class="login-through">
+      <p>Войти через:</p>
+      <div class="socials">
+        <p><i class="fab fa-google"></i></p>
+        <p><i class="fab fa-vk"></i></p>
+      </div>
+    </div>
+    <div class="or">
+      <hr>
+      <p>или</p>
+    </div>
+    <div class="fast-registration">
+      <p>Быстрая регистрация</p>
+    </div>
+    <div class="close-modal-btn" data-modal="login">
+      <p class="close"></p>
+    </div>
+  </div>
+  <div class="forgot-modal">
+    <div class="forgot-text">
+      <h3>Восстановление пароля</h3>
+      <p>Введите e-mail и мы пришлём ссылку для восстановления пароля.</p>
+    </div>
+    <form action="#" method="post">
+      <div class="forgot-info">
+        <p class="p-input">Эл. почта</p>
+        <input type="text" name="email">
+      </div>
+      <div class="forgot-buttons">
+        <button type="submit">Восстановить пароль</button>
+        <p class="canceling">Отмена</p>
+      </div>
+    </form>
+    <div class="close-modal-btn" data-modal="forgot">
+      <p class="close"></p>
+    </div>
+  </div>
+  <div class="registration-modal">
+    <form action="#" method="POST">
+      <div class="heading">
+        <hr>
+        <h3>Регистрация</h3>
+      </div>
+      <div class="registration-info">
+        <p class="p-input">Эл. почта</p>
+        <input type="text" name="remail">
+        <p class="p-input">Пароль</p>
+        <input type="password" name="rpassword">
+        <p class="p-input">Подтвердите пароль</p>
+        <input type="confirm" name="confirm">
+      </div>
+      <div class="registration-btn">
+        <button type="submit">Зарегистрироваться <span>&#8640;</span></button>
+      </div>
+    </form>
+    <div class="registration-through">
+      <p>Зарегистрироваться через:</p>
+      <div class="socials">
+        <p><i class="fab fa-google"></i></p>
+        <p><i class="fab fa-vk"></i></p>
+      </div>
+    </div>
+    <div class="or">
+      <hr>
+      <p>или</p>
+    </div>
+    <div class="registration-login">
+      <p>Войти</p>
+    </div>
+    <div class="close-modal-btn" data-modal="registration">
+      <p class="close"></p>
+    </div>
+  </div>
+</div>
+
+
 <script src="/public/app.js"></script>
