--- a/views/product-edit.hbs
+++ b/views/product-edit.hbs
@@ -41,6 +41,7 @@
       <label for="description">Описание</label>
     </div>
 
+    <input type="hidden" id="csrf" name="_csrf" value="{{csrf}}">
     <input type="hidden" name="id" value="{{product.id}}">
     <button type="submit" class="btn">Редактировать</button>
   </div>
