--- a/views/add.hbs
+++ b/views/add.hbs
@@ -40,6 +40,7 @@
       <textarea id="description" name="description" class="materialize-textarea"></textarea>
       <label for="description">Описание</label>
     </div>
+    <input type="hidden" id="csrf" name="_csrf" value="{{csrf}}">
     <button type="submit" class="btn">Добавить</button>
   </div>
 </form>
