--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -73,12 +73,13 @@
     </div>
   </div>
   <div class="make-an-order">
+    <input type="hidden" id="csrf" name="_csrf" value="{{csrf}}">
   </div>
 </div>
 
 <div class="modal-bg">
   <div class="login-modal">
-    <form action="#" method="POST">
+    <form action="/auth/login" method="POST">
       <div class="login-info">
         <p class="p-input">Эл. почта</p>
         <input type="text" name="email">
@@ -95,6 +96,7 @@
         </div>
       </div>
       <div class="login-btn">
+        <input type="hidden" name="_csrf" value="{{csrf}}">
         <button type="submit">Войти <span>&#8640;</span></button>
       </div>
     </form>
@@ -127,6 +129,7 @@
         <input type="text" name="email">
       </div>
       <div class="forgot-buttons">
+        <input type="hidden" name="_csrf" value="{{csrf}}">
         <button type="submit">Восстановить пароль</button>
         <p class="canceling">Отмена</p>
       </div>
@@ -136,20 +139,21 @@
     </div>
   </div>
   <div class="registration-modal">
-    <form action="#" method="POST">
+    <form action="/auth/register" method="POST">
       <div class="heading">
         <hr>
         <h3>Регистрация</h3>
       </div>
       <div class="registration-info">
         <p class="p-input">Эл. почта</p>
-        <input type="text" name="remail">
+        <input type="text" name="email">
         <p class="p-input">Пароль</p>
-        <input type="password" name="rpassword">
+        <input type="password" name="password">
         <p class="p-input">Подтвердите пароль</p>
-        <input type="confirm" name="confirm">
+        <input type="password" name="confirm">
       </div>
       <div class="registration-btn">
+        <input type="hidden" name="_csrf" value="{{csrf}}">
         <button type="submit">Зарегистрироваться <span>&#8640;</span></button>
       </div>
     </form>
