--- a/views/order-step1.hbs
+++ b/views/order-step1.hbs
@@ -9,43 +9,43 @@
         <div class="delivery-info-list">
           <div class="input-field">
             <p class="p-input">Имя</p>
-            <input name="name" id="name" type="text">
+            <input name="name" id="name" type="text" value="{{user.name}}">
           </div>
           <div class="input-field">
             <p class="p-input">Фамилия</p>
-            <input name="surname" id="surname" type="text">
+            <input name="surname" id="surname" type="text" value="{{user.surname}}">
           </div>
           <div class="input-field">
             <p class="p-input">Отчество</p>
-            <input name="patronymic" id="patronymic" type="text">
+            <input name="patronymic" id="patronymic" type="text" value="{{user.patronymic}}">
           </div>
           <div class="input-field">
             <p class="p-input">Телефон</p>
-            <input name="phone" id="phone" type="number">
+            <input name="phone" id="phone" type="number" value="{{user.phone}}">
           </div>
           <div class="input-field">
             <p class="p-input">Эл. Почта</p>
-            <input name="email" id="email" type="text">
+            <input name="email" id="email" type="text" value="{{user.email}}">
           </div>
           <div class="input-field">
             <p class="p-input">Страна</p>
-            <input name="country" id="country" type="text">
+            <input name="country" id="country" type="text" value="{{user.country}}">
           </div>
           <div class="input-field">
             <p class="p-input">Город</p>
-            <input name="town" id="town" type="text">
+            <input name="town" id="town" type="text" value="{{user.town}}">
           </div>
           <div class="input-field">
             <p class="p-input">Край/Область/Регион</p>
-            <input name="region" id="region" type="text">
+            <input name="region" id="region" type="text" value="{{user.region}}">
           </div>
           <div class="input-field">
             <p class="p-input">Улица, Дом, Квартира</p>
-            <input name="address" id="address" type="text">
+            <input name="address" id="address" type="text" value="{{user.address}}">
           </div>
           <div class="input-field">
             <p class="p-input">Почтовый индекс</p>
-            <input name="zipcode" id="zipcode" type="text">
+            <input name="zipcode" id="zipcode" type="text" value="{{user.zipcode}}">
           </div>
           <div class="continue-section">
             <input type="hidden" id="csrf" name="_csrf" value="{{csrf}}">
