--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -4,15 +4,15 @@
     <div class="profile-list-menu">
       <div class="profile-list-menu-block">
         {{#if isMyProfile}}
-          <a href="/profile/{{user.id}}" class="active">Личные данные</a>
+        <a href="/profile" class="active">Личные данные</a>
         {{else}}
-          <a href="/profile/{{user.id}}">Личные данные</a>
+        <a href="/profile">Личные данные</a>
         {{/if}}
 
         {{#if isMyOrders}}
-          <a href="/profile/{{user.id}}/orders" class="active">Мои заказы</a>
+        <a href="/profile/orders" class="active">Мои заказы</a>
         {{else}}
-          <a href="/profile/{{user.id}}/orders">Мои заказы</a>
+        <a href="/profile/orders">Мои заказы</a>
         {{/if}}
       </div>
       <div class="profile-list-menu-exit">
@@ -25,58 +25,66 @@
           <h2>Персональные данные</h2>
           <p>Изменить</p>
         </div>
-        <div class="profile-list-data-section">
-          <div class="input-field">
-            <label for="name">Имя</label>
-            <input type="text" id="name" name="name" disabled>
+        <form action="/profile/{{user.id}}" method="POST">
+          <div class="profile-list-data-section">
+            <div class="input-field">
+              <label for="surname">Фамилия</label>
+              <input type="text" id="surname" name="surname" value="{{user.surname}}" disabled>
+            </div>
+            <div class="input-field">
+              <label for="name">Имя</label>
+              <input type="text" id="name" name="name" value="{{user.name}}" disabled>
+            </div>
+            <div class="input-field">
+              <label for="name">Отчество</label>
+              <input type="text" id="patronymic" name="patronymic" value="{{user.patronymic}}" disabled>
+            </div>
+            <div class="input-field">
+              <label for="name">Телефон</label>
+              <input type="number" id="phone" name="phone" value="{{user.phone}}" disabled>
+            </div>
           </div>
-          <div class="input-field">
-            <label for="surname">Фамилия</label>
-            <input type="text" id="surname" name="surname" disabled>
+          <div class="save-changes-btn">
+            <input type="hidden" name="_csrf" value="{{csrf}}">
+            <input type="hidden" name="id" value="{{user.id}}">
+            <button type="submit">Сохранить изменения</button>
           </div>
-          <div class="input-field">
-            <label for="name">Отчество</label>
-            <input type="text" id="patronymic" name="patronymic" disabled>
-          </div>
-          <div class="input-field">
-            <label for="name">Телефон</label>
-            <input type="number" id="phone" name="phone" disabled>
-          </div>          
-        </div>
-        <div class="save-changes-btn">
-          <button>Сохранить изменения</button>
-        </div>
+        </form>
       </div>
       <div class="delivery-data change-unactive">
         <div class="profile-list-info-heading">
           <h2>Адрес доставки</h2>
           <p>Изменить</p>
         </div>
-        <div class="profile-list-data-section">
-          <div class="input-field">
-            <label for="name">Страна</label>
-            <input type="text" id="country" name="country" disabled>
+        <form action="/profile/{{user.id}}" method="POST">
+          <div class="profile-list-data-section">
+            <div class="input-field">
+              <label for="name">Страна</label>
+              <input type="text" id="country" name="country" value="{{user.country}}" disabled>
+            </div>
+            <div class="input-field">
+              <label for="surname">Город</label>
+              <input type="text" id="town" name="town" value="{{user.town}}" disabled>
+            </div>
+            <div class="input-field">
+              <label for="name">Край/Область/Регион</label>
+              <input type="text" id="region" name="region" value="{{user.region}}" disabled>
+            </div>
+            <div class="input-field">
+              <label for="name">Улица, дом, квартира</label>
+              <input type="text" id="address" name="address" value="{{user.address}}" disabled>
+            </div>
+            <div class="input-field">
+              <label for="name">Почтовый индекс</label>
+              <input type="number" id="zipcode" name="zipcode" value="{{user.zipcode}}" disabled>
+            </div>
           </div>
-          <div class="input-field">
-            <label for="surname">Город</label>
-            <input type="text" id="town" name="town" disabled>
+          <div class="save-changes-btn">
+            <input type="hidden" name="_csrf" value="{{csrf}}">
+            <input type="hidden" name="id" value="{{user.id}}">
+            <button type="submit">Сохранить изменения</button>
           </div>
-          <div class="input-field">
-            <label for="name">Край/Область/Регион</label>
-            <input type="text" id="region" name="region" disabled>
-          </div>
-          <div class="input-field">
-            <label for="name">Улица, дом, квартира</label>
-            <input type="number" id="address" name="address" disabled>
-          </div>
-          <div class="input-field">
-            <label for="name">Почтовый индекс</label>
-            <input type="number" id="zipcode" name="zipcode" disabled>
-          </div>
-        </div>
-        <div class="save-changes-btn">
-          <button>Сохранить изменения</button>
-        </div>
+        </form>
       </div>
     </div>
   </div>
