--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -23,11 +23,11 @@
     <div class="login_cart">
       {{#if isAuth}}
         <div class="login">
-          <a href="/profile/1"><button class="isauth"><i class="fas fa-user"></i></button></a>
+          <a href="/profile"><button class="isauth"><i class="fas fa-user"></i></button></a>
         </div>
       {{else if isAdmin}}
         <div class="login">
-          <a href="/profile/1"><button class="isauth"><i class="fas fa-user"></i></button></a>
+          <a href="/profile"><button class="isauth"><i class="fas fa-user"></i></button></a>
         </div>
       {{else}}
         <div class="login">
